# xpmminer

./: CMakeLists.txt  README.md  adl.cpp  adl.h  baseclient.cpp  baseclient.h  bb  benchmarks.cpp  benchmarks.h  config.txt  equiw200k9.bin.bak  opencl.cpp  opencl.h  protocol.proto  sha256.cpp  sha256.h  xpmclient.cpp  xpmclient.h  zcashcpuclient.cpp  zcashcpuclient.h
cmake/: FindDependencies.cmake
gpu/: fermat.cl  procs.cl  sha256.cl  sieve.cl
zcash/: blake2-config.h  common.h  equihash_original.cpp  equihash_original.h  sha256.cpp  zcashgpuclient.cpp  zcashgpuclient.h
